{
    "name": "InputControl",
    "maps": [
        {
            "name": "Dice",
            "id": "3ff93b23-4b87-4809-87b4-4224b542ecf7",
            "actions": [
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "445159a1-9d01-4793-b53b-81f0999c0152",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "4fb91722-345a-4727-9781-3c4bd2df930a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Forward",
                    "type": "Button",
                    "id": "bbd75d7e-e152-444b-b99f-12d138febba5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Backward",
                    "type": "Button",
                    "id": "b39ea07a-7f45-4fe5-bb63-0fde767a4421",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c1c0b7f8-4364-4fcc-a67f-64d57d1da05b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3fcec0c6-b6bc-408b-a591-4a91351fa30d",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97910000-5feb-4dfe-bebb-1d7fa1b35382",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "084a6da3-36f8-4e79-ad3c-508dcab178ca",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2bb021bb-435d-4b32-8ec3-0f27cc64f375",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4bb772cd-6414-4012-a672-a4a549b9cb1c",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d6b7d9d-78f7-4696-a86b-f385d89a0cbd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Backward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b71016f7-35f1-453b-b291-265e88a6653e",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Backward",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameControl",
            "id": "3fc60547-e9af-463a-aca4-8ff83bb1212f",
            "actions": [
                {
                    "name": "NextLevel",
                    "type": "Button",
                    "id": "95fe8a2d-1fd1-4fea-9cb5-189022476bb6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PreviousLevel",
                    "type": "Button",
                    "id": "0e79eaca-e49e-4929-abb4-48f6ef3416a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "885f8cf8-55ee-495b-9baf-965d6d636e86",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FinishGame",
                    "type": "Button",
                    "id": "835f0117-306d-4949-8bdd-aa59c1526140",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "e1c21ffb-fd7c-4123-b4ae-3ab17aa3d4a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f96855be-25c8-406c-a2d3-73ead376c083",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89eb17b5-d618-449b-bb5a-351e0282dce1",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0080fac-e36a-40c2-9518-dd6914c43e36",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81bdef3f-c6e2-4821-955f-7c8252306703",
                    "path": "<Keyboard>/slash",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9caac3af-f475-4b5f-9975-80b24ebf2c57",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FinishGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc316210-9a33-4402-95f0-e303bd8494b2",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}